# reflex-tutorial

./: README.md  default.nix
blog/: default.nix
blog/drafts/reflex/basics/: behaviors.md  collections.md  components.md  dom.md  dynamics.md  events.md  eventwriter.md  introduction.md  recursivedo.md  switching.md
blog/posts/reflex/basics/: behaviors.md  dom.md  dynamics.md  events.md  introduction.md  switching.md
code/: .gitignore  reflex-platform.json  reflex-platform.nix
code/basics/: ChangeLog.md  basics.cabal  basics.nix  default.nix  reflex-platform.nix
code/basics/css/: events.css  grid-light.css  todo.css
code/basics/exe/: Main.hs
code/basics/js/: rxjs-example.js
code/basics/src/: Colour.hs  Posts.hs
code/basics/src/Posts/: Behavior.hs  Collection.hs  Component.hs  Dom.hs  Dynamic.hs  Event.hs  RecursiveDo.hs  Switch.hs
code/basics/src/Util/: Grid.hs  (+2 more)
code/common/: common.cabal  common.nix  default.nix  shell.nix
code/exercises/: changelog.md  default.nix  ex00.ghci  ex00.sh  ex01.ghci  ex01.sh  ex02.ghci  ex02.sh  ex03.ghci  ex03.sh  ex04.ghci  ex04.sh  ex05.ghci  ex05.sh  ex06.ghci  ex06.sh  ex07.ghci  ex07.sh  ex08.ghci  ex08.sh  ex09.ghci  ex09.sh  ex10.ghci  ex10.sh  ex11.ghci  ex11.sh  ex12.ghci  ex12.sh  ex13.ghci  ex13.sh  ex14.ghci  ex14.sh  exercises.cabal  exercises.nix  reflex-platform.nix  shell.nix
code/exercises/exe/: Main.hs
code/exercises/src/: Solutions.hs
code/grid/: default.nix  grid.cabal  grid.nix
code/grid/src/: Colour.hs
code/grid/src/Util/: Grid.hs  SVG.hs
code/grid/src/Util/Grid/: Config.hs  Square.hs
(+97 files in other folders)
