name:                grid
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Colour
                     , Util.SVG
                     , Util.Grid
                     , Util.Grid.Square
                     , Util.Grid.Config
  build-depends:       base >=4.9 && <4.13
                     , containers >=0.5 && <0.7
                     , text >= 1.2 && < 1.3
                     , reflex >= 0.5 && < 0.7
                     , reflex-dom-core >= 0.4 && < 0.6
                     , ghcjs-dom >= 0.9 && < 0.10
                     , jsaddle >= 0.9 && < 0.10
                     , data-default >= 0.7 && < 0.8
                     , lens >= 4.15 && < 4.18
                     , mtl >= 2.2 && < 2.3
                     , common >= 0.1 && < 0.2
  hs-source-dirs:      src
  if impl(ghcjs -any)
    ghc-options:       -Wall -O2 -dedupe
    cpp-options:       -DGHCJS_BROWSER
  else
    ghc-options:       -Wall -O2
  default-language:    Haskell2010
